--- a/notebooks/paper_figures_ignition_grid_qcnn.ipynb
+++ b/notebooks/paper_figures_ignition_grid_qcnn.ipynb
@@ -25,8 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core.autoencoder import AutoEncoder\n",
-    "from core.structured_data import GridDataModule\n",
+    "from core.utils import load_checkpoint\n",
     "\n",
     "import seaborn\n",
     "\n",
@@ -37,199 +36,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kevin\\Google Drive\\Research\\QuadConv\\lightning_logs\\ignition_maxskip_qcnn\\lassen_version_2\\checkpoints\n",
-      "Loading experiment ignition_maxskip_qcnn and C:\\Users\\Kevin\\Google Drive\\Research\\QuadConv\\lightning_logs\\ignition_maxskip_qcnn\\lassen_version_2\\checkpoints\\epoch=44432.ckpt \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AutoEncoder(\n",
-       "  (loss_fn): SobolevLoss()\n",
-       "  (output_activation): Tanh()\n",
-       "  (encoder): Encoder(\n",
-       "    (activation1): CELU(alpha=1.0)\n",
-       "    (activation2): CELU(alpha=1.0)\n",
-       "    (cnn): Sequential(\n",
-       "      (0): QuadConvLayer(\n",
-       "        (G): Sequential(\n",
-       "          (0): Linear(in_features=2, out_features=16, bias=False)\n",
-       "          (1): Sin()\n",
-       "          (2): Linear(in_features=16, out_features=16, bias=False)\n",
-       "          (3): Sin()\n",
-       "          (4): Linear(in_features=16, out_features=16, bias=False)\n",
-       "          (5): Sin()\n",
-       "          (6): Linear(in_features=16, out_features=16, bias=False)\n",
-       "          (7): Unflatten(dim=1, unflattened_size=(1, 16))\n",
-       "        )\n",
-       "      )\n",
-       "      (1): PoolQuadConvBlock(\n",
-       "        (resample): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "        (conv1): QuadConvLayer(\n",
-       "          (G): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=16, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=16, out_features=16, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=16, out_features=16, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=16, out_features=256, bias=False)\n",
-       "            (7): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "        )\n",
-       "        (batchnorm1): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation1): CELU(alpha=1.0)\n",
-       "        (conv2): QuadConvLayer(\n",
-       "          (G): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=16, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=16, out_features=16, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=16, out_features=16, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=16, out_features=256, bias=False)\n",
-       "            (7): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "        )\n",
-       "        (batchnorm2): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation2): CELU(alpha=1.0)\n",
-       "      )\n",
-       "    )\n",
-       "    (flat): Flatten(start_dim=1, end_dim=-1)\n",
-       "    (linear): Sequential(\n",
-       "      (0): ParametrizedLinear(\n",
-       "        in_features=10000, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (1): CELU(alpha=1.0)\n",
-       "      (2): ParametrizedLinear(\n",
-       "        in_features=50, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (3): CELU(alpha=1.0)\n",
-       "    )\n",
-       "  )\n",
-       "  (decoder): Decoder(\n",
-       "    (activation1): CELU(alpha=1.0)\n",
-       "    (activation2): CELU(alpha=1.0)\n",
-       "    (unflat): Unflatten(dim=1, unflattened_size=torch.Size([16, 625]))\n",
-       "    (linear): Sequential(\n",
-       "      (0): ParametrizedLinear(\n",
-       "        in_features=50, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (1): CELU(alpha=1.0)\n",
-       "      (2): ParametrizedLinear(\n",
-       "        in_features=50, out_features=10000, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (3): CELU(alpha=1.0)\n",
-       "    )\n",
-       "    (cnn): Sequential(\n",
-       "      (0): PoolQuadConvBlock(\n",
-       "        (resample): Upsample(scale_factor=2.0, mode=nearest)\n",
-       "        (conv1): QuadConvLayer(\n",
-       "          (G): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=16, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=16, out_features=16, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=16, out_features=16, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=16, out_features=256, bias=False)\n",
-       "            (7): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "        )\n",
-       "        (batchnorm1): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation1): CELU(alpha=1.0)\n",
-       "        (conv2): QuadConvLayer(\n",
-       "          (G): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=16, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=16, out_features=16, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=16, out_features=16, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=16, out_features=256, bias=False)\n",
-       "            (7): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "        )\n",
-       "        (batchnorm2): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation2): CELU(alpha=1.0)\n",
-       "      )\n",
-       "      (1): QuadConvLayer(\n",
-       "        (G): Sequential(\n",
-       "          (0): Linear(in_features=2, out_features=16, bias=False)\n",
-       "          (1): Sin()\n",
-       "          (2): Linear(in_features=16, out_features=16, bias=False)\n",
-       "          (3): Sin()\n",
-       "          (4): Linear(in_features=16, out_features=16, bias=False)\n",
-       "          (5): Sin()\n",
-       "          (6): Linear(in_features=16, out_features=16, bias=False)\n",
-       "          (7): Unflatten(dim=1, unflattened_size=(16, 1))\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#### Change the entries here to analyze a new model / dataset\n",
-    "experiment_name = 'ignition_maxskip_qcnn'\n",
-    "model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\Google Drive\\\\Research\\\\QuadConv\\\\lightning_logs\\\\ignition_maxskip_qcnn\\\\lassen_version_2') / 'checkpoints'\n",
-    "input_shape = (1,1,2500)\n",
-    "###################\n",
-    "\n",
-    "checkpoint = list(model_checkpoint_path.glob('epoch=*.ckpt'))\n",
-    "\n",
-    "print(model_checkpoint_path)\n",
-    "\n",
-    "print(f'Loading experiment {experiment_name} and {checkpoint[0]} ')\n",
-    "\n",
-    "experiment_path = Path('../experiments/')\n",
-    "model_yml = list(experiment_path.rglob(experiment_name + '*'))\n",
-    "\n",
-    "with model_yml[0].open() as file:\n",
-    "    config = yaml.safe_load(file)\n",
-    "\n",
-    "config['data']['data_dir'] = 'C:\\\\Users\\\\Kevin\\\\Google Drive\\\\Research\\\\QuadConv\\\\data\\\\ignition_center_cut'\n",
-    "\n",
-    "data_module = GridDataModule(**config['data'])\n",
-    "data_module.setup(stage='analyze')\n",
-    "dataset = data_module.analyze_data()\n",
-    "\n",
-    "#TODO Make a dataloader option that outputs 1 experiments worth of data\n",
-    "\n",
-    "model = AutoEncoder.load_from_checkpoint(checkpoint[0], input_shape=input_shape, **config['model'])\n",
-    "model.eval()\n",
-    "model.to('cpu')"
+    "model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\OneDrive - UCB-O365\\\\Documents\\\\Research\\\\QuadConv\\\\lightning_logs\\\\ignition_grid\\\\paper\\\\qcae_pool_learn_weights\\\\version_2')\n",
+    "data_path = Path('C:\\\\Users\\\\Kevin\\\\OneDrive - UCB-O365\\\\Documents\\\\Research\\\\QuadConv\\\\data\\\\ignition_grid')\n",
+    "model, dataset = load_checkpoint(model_checkpoint_path, data_path)"
    ]
   },
   {
@@ -486,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1035310\n",
+      "1038435\n",
       "(1, 2)\n",
-      "tensor(0.0065)\n",
+      "tensor(0.0141)\n",
       "torch.Size([450, 1, 2500])\n",
       "torch.Size([450])\n"
      ]
@@ -503,7 +314,6 @@
    ],
    "source": [
     "# print relevant numbers\n",
-    "\n",
     "print(sum(p.numel() for p in model.parameters() if p.requires_grad))\n",
     "\n",
     "\n",
