--- a/notebooks/quadrature_analysis.ipynb
+++ b/notebooks/quadrature_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pytorch_lightning as pl \n",
     "from pathlib import Path\n",
-    "import yaml\n",
-    "from importlib import import_module\n",
+    "\n",
+    "from core.utils import load_checkpoint\n",
     "from matplotlib.tri import Triangulation as triang\n",
     "import seaborn\n",
     "\n",
@@ -22,379 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Change the entries here to analyze a new model / dataset\n",
-    "#model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\Google Drive\\\\Research\\\\QCbranch\\\\QuadConv\\\\lightning_logs\\\\ignition_small_refined\\\\lassen_version_0')\n",
-    "model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\OneDrive - UCB-O365\\\\Documents\\\\Research\\\\QuadConv\\\\lightning_logs\\\\qcae_pool\\\\version_13')\n",
-    "###################\n",
-    "\n",
-    "model_yml = list(model_checkpoint_path.glob('config.yaml'))\n",
-    "\n",
-    "with model_yml[0].open() as file:\n",
-    "    config = yaml.safe_load(file)\n",
-    "\n",
-    "#extract args\n",
-    "trainer_args = config['train']\n",
-    "model_args = config['model']\n",
-    "data_args = config['data']\n",
-    "misc_args = config['misc']\n",
-    "\n",
-    "checkpoint = list(model_checkpoint_path.rglob('epoch=*.ckpt'))\n",
-    "\n",
-    "checkpoint_dict = torch.load(checkpoint[0])\n",
-    "\n",
-    "state_dict = checkpoint_dict['state_dict']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Model(\n",
-       "  (loss_fn): MSELoss()\n",
-       "  (mesh): MeshHandler(\n",
-       "    (_points): ParameterList(\n",
-       "        (0): Parameter containing: [torch.FloatTensor of size 2189x2]\n",
-       "        (1): Parameter containing: [torch.FloatTensor of size 2304x2]\n",
-       "        (2): Parameter containing: [torch.FloatTensor of size 576x2]\n",
-       "        (3): Parameter containing: [torch.FloatTensor of size 144x2]\n",
-       "    )\n",
-       "    (_weights): ParameterList(\n",
-       "        (0): Parameter containing: [torch.FloatTensor of size 2189]\n",
-       "        (1): Parameter containing: [torch.FloatTensor of size 2304]\n",
-       "        (2): Parameter containing: [torch.FloatTensor of size 576]\n",
-       "        (3): Parameter containing: [torch.FloatTensor of size 144]\n",
-       "    )\n",
-       "    (_adjacency): ParameterList()\n",
-       "  )\n",
-       "  (output_activation): Tanh()\n",
-       "  (encoder): Encoder(\n",
-       "    (init_layer): QuadConv(\n",
-       "      (H): Sequential(\n",
-       "        (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "        (1): Sin()\n",
-       "        (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "        (3): Sin()\n",
-       "        (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "        (5): Sin()\n",
-       "        (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "        (7): Sin()\n",
-       "        (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "        (9): Sin()\n",
-       "        (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "        (11): Sin()\n",
-       "        (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "        (13): Sin()\n",
-       "        (14): Linear(in_features=4, out_features=64, bias=False)\n",
-       "        (15): Unflatten(dim=1, unflattened_size=(4, 16))\n",
-       "      )\n",
-       "      (weight_activation): Sigmoid()\n",
-       "    )\n",
-       "    (qcnn): Sequential(\n",
-       "      (0): PoolBlock(\n",
-       "        (resample): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "        (conv1): QuadConv(\n",
-       "          (H): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (7): Sin()\n",
-       "            (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (9): Sin()\n",
-       "            (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "            (11): Sin()\n",
-       "            (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (13): Sin()\n",
-       "            (14): Linear(in_features=4, out_features=256, bias=False)\n",
-       "            (15): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "          (weight_activation): Sigmoid()\n",
-       "        )\n",
-       "        (batchnorm1): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation1): CELU(alpha=1.0)\n",
-       "        (conv2): QuadConv(\n",
-       "          (H): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (7): Sin()\n",
-       "            (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (9): Sin()\n",
-       "            (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "            (11): Sin()\n",
-       "            (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (13): Sin()\n",
-       "            (14): Linear(in_features=4, out_features=256, bias=False)\n",
-       "            (15): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "          (weight_activation): Sigmoid()\n",
-       "        )\n",
-       "        (batchnorm2): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation2): CELU(alpha=1.0)\n",
-       "      )\n",
-       "      (1): PoolBlock(\n",
-       "        (resample): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "        (conv1): QuadConv(\n",
-       "          (H): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (7): Sin()\n",
-       "            (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (9): Sin()\n",
-       "            (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "            (11): Sin()\n",
-       "            (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (13): Sin()\n",
-       "            (14): Linear(in_features=4, out_features=256, bias=False)\n",
-       "            (15): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "          (weight_activation): Sigmoid()\n",
-       "        )\n",
-       "        (batchnorm1): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation1): CELU(alpha=1.0)\n",
-       "        (conv2): QuadConv(\n",
-       "          (H): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (7): Sin()\n",
-       "            (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (9): Sin()\n",
-       "            (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "            (11): Sin()\n",
-       "            (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (13): Sin()\n",
-       "            (14): Linear(in_features=4, out_features=256, bias=False)\n",
-       "            (15): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "          (weight_activation): Sigmoid()\n",
-       "        )\n",
-       "        (batchnorm2): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation2): CELU(alpha=1.0)\n",
-       "      )\n",
-       "    )\n",
-       "    (flat): Flatten(start_dim=1, end_dim=-1)\n",
-       "    (linear): Sequential(\n",
-       "      (0): ParametrizedLinear(\n",
-       "        in_features=2304, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (1): CELU(alpha=1.0)\n",
-       "      (2): ParametrizedLinear(\n",
-       "        in_features=50, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (3): CELU(alpha=1.0)\n",
-       "    )\n",
-       "  )\n",
-       "  (decoder): Decoder(\n",
-       "    (unflat): Unflatten(dim=1, unflattened_size=torch.Size([16, 144]))\n",
-       "    (linear): Sequential(\n",
-       "      (0): ParametrizedLinear(\n",
-       "        in_features=50, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (1): CELU(alpha=1.0)\n",
-       "      (2): ParametrizedLinear(\n",
-       "        in_features=50, out_features=2304, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (3): CELU(alpha=1.0)\n",
-       "    )\n",
-       "    (qcnn): Sequential(\n",
-       "      (0): PoolBlock(\n",
-       "        (resample): Upsample(scale_factor=2.0, mode=nearest)\n",
-       "        (conv1): QuadConv(\n",
-       "          (H): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (7): Sin()\n",
-       "            (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (9): Sin()\n",
-       "            (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "            (11): Sin()\n",
-       "            (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (13): Sin()\n",
-       "            (14): Linear(in_features=4, out_features=256, bias=False)\n",
-       "            (15): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "          (weight_activation): Sigmoid()\n",
-       "        )\n",
-       "        (batchnorm1): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation1): CELU(alpha=1.0)\n",
-       "        (conv2): QuadConv(\n",
-       "          (H): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (7): Sin()\n",
-       "            (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (9): Sin()\n",
-       "            (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "            (11): Sin()\n",
-       "            (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (13): Sin()\n",
-       "            (14): Linear(in_features=4, out_features=256, bias=False)\n",
-       "            (15): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "          (weight_activation): Sigmoid()\n",
-       "        )\n",
-       "        (batchnorm2): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation2): CELU(alpha=1.0)\n",
-       "      )\n",
-       "      (1): PoolBlock(\n",
-       "        (resample): Upsample(scale_factor=2.0, mode=nearest)\n",
-       "        (conv1): QuadConv(\n",
-       "          (H): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (7): Sin()\n",
-       "            (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (9): Sin()\n",
-       "            (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "            (11): Sin()\n",
-       "            (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (13): Sin()\n",
-       "            (14): Linear(in_features=4, out_features=256, bias=False)\n",
-       "            (15): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "          (weight_activation): Sigmoid()\n",
-       "        )\n",
-       "        (batchnorm1): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation1): CELU(alpha=1.0)\n",
-       "        (conv2): QuadConv(\n",
-       "          (H): Sequential(\n",
-       "            (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "            (1): Sin()\n",
-       "            (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (3): Sin()\n",
-       "            (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "            (5): Sin()\n",
-       "            (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (7): Sin()\n",
-       "            (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "            (9): Sin()\n",
-       "            (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "            (11): Sin()\n",
-       "            (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "            (13): Sin()\n",
-       "            (14): Linear(in_features=4, out_features=256, bias=False)\n",
-       "            (15): Unflatten(dim=1, unflattened_size=(16, 16))\n",
-       "          )\n",
-       "          (weight_activation): Sigmoid()\n",
-       "        )\n",
-       "        (batchnorm2): InstanceNorm1d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation2): CELU(alpha=1.0)\n",
-       "      )\n",
-       "    )\n",
-       "    (init_layer): QuadConv(\n",
-       "      (H): Sequential(\n",
-       "        (0): Linear(in_features=2, out_features=4, bias=False)\n",
-       "        (1): Sin()\n",
-       "        (2): Linear(in_features=4, out_features=4, bias=False)\n",
-       "        (3): Sin()\n",
-       "        (4): Linear(in_features=4, out_features=8, bias=False)\n",
-       "        (5): Sin()\n",
-       "        (6): Linear(in_features=8, out_features=8, bias=False)\n",
-       "        (7): Sin()\n",
-       "        (8): Linear(in_features=8, out_features=8, bias=False)\n",
-       "        (9): Sin()\n",
-       "        (10): Linear(in_features=8, out_features=4, bias=False)\n",
-       "        (11): Sin()\n",
-       "        (12): Linear(in_features=4, out_features=4, bias=False)\n",
-       "        (13): Sin()\n",
-       "        (14): Linear(in_features=4, out_features=64, bias=False)\n",
-       "        (15): Unflatten(dim=1, unflattened_size=(16, 4))\n",
-       "      )\n",
-       "      (weight_activation): Sigmoid()\n",
-       "    )\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "#setup datamodule\n",
-    "module = import_module('core.' + data_args.pop('module'))\n",
-    "datamodule = module.DataModule(**data_args)\n",
-    "datamodule.setup(stage='analyze')\n",
-    "dataset = datamodule.analyze_data()\n",
-    "\n",
-    "#build model\n",
-    "module = import_module('core.' + model_args.pop('type') + '.model')\n",
-    "model = module.Model(**model_args, data_info = datamodule.get_data_info())\n",
-    "\n",
-    "del_list = []\n",
-    "for key in state_dict:\n",
-    "    if 'eval_indices' in key:\n",
-    "        del_list.append(key)\n",
-    "\n",
-    "for key in del_list:\n",
-    "    del state_dict[key]\n",
-    "\n",
-    "model.load_state_dict(state_dict, strict=False)\n",
-    "model.eval()\n",
-    "model.to('cpu')\n",
-    "\n"
+    "model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\OneDrive - UCB-O365\\\\Documents\\\\Research\\\\QuadConv\\\\lightning_logs\\\\ignition_grid\\\\paper\\\\qcae_pool_learn_weights\\\\version_2')\n",
+    "data_path = Path('C:\\\\Users\\\\Kevin\\\\OneDrive - UCB-O365\\\\Documents\\\\Research\\\\QuadConv\\\\data\\\\ignition_grid')\n",
+    "model, dataset = load_checkpoint(model_checkpoint_path, data_path)"
    ]
   },
   {
@@ -700,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:50:36) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
